# cmake-v-play-test

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vplay.cmake
qml/: DetailPage.qml  Main.qml
